Warning fixes in test classes